applied PR comments + implemented getFunctionColumns()